--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./build/index.js",
-    "start:dev": "nodemon --legacy-watch",
+    "start:dev": "nodemon",
+    "test": "nodemon --exec \"ts-node ./src/test.ts\"",
     "clean": "rm -rf build/*",
     "build": "tsc"
   },
   "dependencies": {
-    "@artlife/micro-job": "0.0.6"
+    "@artlife/micro-job": "0.0.26"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
-    "@types/node": "^10.11.4",
-    "dotenv": "^6.1.0",
+    "@types/node": "^14.14.33",
     "nodemon": "^1.18.6",
     "source-map-support": "0.5.9",
-    "ts-node": "^7.0.1",
-    "typescript": "3.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
